--- a/client/src/component/Viewblog.css
+++ b/client/src/component/Viewblog.css
@@ -20,3 +20,10 @@
     display: flex;
     justify-content: center;
 }
+@media (max-width: 581px) {
+    .flex_blogs{
+      display: flex;
+      flex-direction: column !important;
+      
+  }
+  }
