--- a/client/src/component/AddBlogs.css
+++ b/client/src/component/AddBlogs.css
@@ -15,3 +15,10 @@
 .btn_box{
    display: flex;
 }
+@media (max-width: 581px) {
+    .flex_blog{
+      display: flex;
+      flex-direction: column !important;
+      
+  }
+  }
