--- a/client/src/component/ViewNews.css
+++ b/client/src/component/ViewNews.css
@@ -50,3 +50,15 @@
 .card-bottom p{
     font-size: 18px;
 }
+@media (max-width: 581px) {
+    .flex_viewnews{
+      display: flex;
+      flex-direction: column !important;
+      
+  }
+  .card-main{
+    width: 100% ;
+    flex: auto;
+    max-width: 90%;
+  }
+  }
