--- a/client/src/component/menu/Navbarmenu.css
+++ b/client/src/component/menu/Navbarmenu.css
@@ -69,7 +69,7 @@ li {
 }
 .menu-item a {
   font-size: 14px;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 40px;
   position: relative;
   display: block;
@@ -182,7 +182,7 @@ li {
   margin: 7px 27px;
 }
 .menu-item:hover > a{
-  /* color: #07a8ff !important; */
+  transition: .2s;
   color: #fff !important;
   border-bottom: 2px solid #4af8d5;
 }
