--- a/client/src/component/Admin.css
+++ b/client/src/component/Admin.css
@@ -1,3 +1,149 @@
-.aa{
+/* .aa{
     color: black !important;
+} */
+html,
+body,
+.wrapper {
+  height: 100%;
+}
+
+@keyframes gradient {
+  100% {
+    background-size: 4000px 1000px;
+  }
+}
+
+.contentAdmin {
+  display: grid;
+  place-items: center;
+  margin: 0;
+  padding: 0 24px;
+  height: 100vh;
+  background-image: url(./Images/Wave2.svg);
+  background-size: 2000px 1000px;
+  background-position: -800px 0;
+  color: white;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  animation: gradient 20s infinite alternate linear;
+}
+
+@media (width >= 500px) {
+  .contentAdmin {
+    padding: 0;
+  }
+}
+
+.login {
+  
+  z-index: 3;
+  
+ 
+  width: 90%;
+  padding: 70px 30px 44px;
+  border-radius: 22px;
+  background: #010101;
+  background: -webkit-linear-gradient(bottom left, #010101, #0661FF);
+  background: -moz-linear-gradient(bottom left, #010101, #0661FF);
+  background: linear-gradient(to top right, #010101, #0661FF);
+  text-align: center;
+}
+
+@media (width >= 450px) {
+  .login {
+    width: 380px;
+  }
+}
+
+.avatar {
+  margin: 0 auto 16px;
+  border-radius: 50%;
+  background: linear-gradient(-45deg, #157ae1, #c7a1ff);
+  padding: 2px;
+  width: 120px;
+  height: 120px;
+}
+
+.avatar > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  
+ 
+}
+
+.login > h2 {
+  font-size: 36px;
+  font-weight: 500;
+  margin: 0 0 4px;
+}
+
+.login > h3 {
+  color: white;
+  margin: 0 0 30px;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.login-form {
+  display: grid;
+  gap: 16px;
+  place-items: center;
+  width: 100%;
+  margin: 0;
+}
+
+.textbox {
+  width: 100%;
+  position: relative;
+}
+
+.textbox span {
+  position: absolute;
+  top: 25%;
+  left: 16px;
+  /* translate: 0 -50%; */
+  color: white;
+}
+
+.login-form input,
+.login-form button {
+  width: 100%;
+  height: 60px;
+  outline: none;
+  padding: 0;
+  font-family: inherit;
+  font-size: 16px;
+  border-radius: 8px;
+}
+
+.login-form input {
+  background: transparent;
+  border: 2px solid rgba(255, 255, 255, 0.1);
+  font-size: 18px;
+  padding: 0 20px 0 50px;
+  color: inherit;
+}
+
+.login-form input:focus {
+  border-color: #157ae1;
+}
+
+.login-form input:focus ~ span {
+  color: #157ae1;
+}
+
+.login-form button {
+  cursor: pointer;
+  background: #157ae1;
+  color: #f9f9f9;
+  border: 0;
+  font-weight: 600;
+  letter-spacing: 2px;
+}
+
+.login-form a {
+  color: #157ae1;
+  font-size: 16px;
+  text-align: left;
+  text-decoration: none;
 }
