--- a/client/src/component/Home.css
+++ b/client/src/component/Home.css
@@ -284,6 +284,7 @@ button.view-btn {
     color: #1A3073;
     text-decoration: none;
     font-weight: 600;
+    text-transform: uppercase;
 }
 /* Investing section end */
 
