--- a/client/src/component/Learn.css
+++ b/client/src/component/Learn.css
@@ -140,6 +140,15 @@ section#Learn-banner {
 
 
 /* responsive */
+@media (max-width:1200px) {
+#Learn-banner .Banner-main {
+    height: 20px;
+}
+.Banner-title h2 {
+    font-size: 52px;
+    line-height: 61px;
+}
+}
 @media (max-width:992px) {
     .Banner-title h2 {
         font-size: 50px;
@@ -177,6 +186,9 @@ section#Learn-banner {
     #recommand-sec .traningimg {
         padding-bottom: 6px;
     }
+    #tranding-section {
+        padding: 30px 0px 30px 0px;
+    }
 }
 
 
@@ -187,7 +199,7 @@ section#Learn-banner {
         line-height: 46px;
     }
     #Learn-banner .Banner-main {
-        height: 200px;
+        height: 230px;
     }
     #tranding-section {
         padding: 30px 0px 30px 0px;
