--- a/client/src/component/menu/Footer.css
+++ b/client/src/component/menu/Footer.css
@@ -170,6 +170,8 @@ ul.socillist {
 }
 }
 
-@media (max-width:500px){
-   
+@media (max-width:667px){
+    .footer-first:nth-child(1) {
+        padding: 0px 0px 0px 0px;
+    }
  }
